@@ -1,3 +1,8 @@
+2008-04-09  Ville Vainio <vivainio@gmail.com>
+
+	* deep_reload.py: do not crash on from __future__ import 
+	absolute_import. Close #244.
+
 2008-04-02  Ville Vainio <vivainio@gmail.com>
 
 	* ipy_winpdb.py: New extension for winpdb integration.  %wdb
